solarized syntax; some posts

--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -277,7 +277,7 @@ span + .entry-title {
 	@media @large {
 		display: block;
 		width: 150px;
-		height: 150px;
+		// height: 150px;
 		margin-bottom: 10px;
 		.rounded(150px);
 		.clearfix();
