--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -22,10 +22,11 @@ body {
 
 @body-color      		: #ebebeb;
 @text-color      		: #222;
-@base-color 	 		: #343434;	  
-@comp-color 	 		: spin(@base-color, 180); 
+@base-color 	 		  : #343434;	  
+@comp-color 	 		  : spin(@base-color, 180); 
 @border-color    		: @base-color;
 @white           		: #fff;
 @black           		: #000;
 @accent-color    		: @black;
 @link-color 		    : #222;
+@soft-color         : #8d8d8d;
