--- a/assets/less/typography.less
+++ b/assets/less/typography.less
@@ -89,8 +89,9 @@ figcaption {
 blockquote {
 	font-family: @alt-font;
 	font-style: italic;
-	.font-size(24);
+	.font-size(20);
 	padding-left: 20px;
+  color: @soft-color;
 	border-left: 8px solid @black;
 }
 
