--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -217,7 +217,7 @@ span + .entry-title {
 	font-weight: 700;
 	line-height: 1;
 	letter-spacing: -3px;
-	a {
+	.link a {
 		color: @black;
 		text-decoration: underline;
 	}
