--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -1,11 +1,11 @@
 // Typography
 // --------------------------------------------------
 
-@base-font: 'source-sans-pro', sans-serif;
-@heading-font: @base-font;
-@caption-font: @base-font;
-@code-font: 'source-code-pro', monospace;
-@alt-font: 'volkhov', serif;
+@base-font: 'Lora', Georgia, serif;
+@heading-font: 'Open Sans', sans-serif;
+@caption-font: @heading-font;
+@code-font: 'Source Code Pro', Consolas, 'Ubuntu Mono', 'DejaVu Sans Mono', Inconsolata, Menlo, monospace;
+@alt-font: @heading-font;
 
 @doc-font-size: 16;
 @doc-line-height: 24;
@@ -27,6 +27,7 @@ body {
 @border-color    		: @base-color;
 @white           		: #fff;
 @black           		: #000;
-@accent-color    		: @black;
+// @accent-color    		: @black;
+@accent-color    		: #fc0f3e;
 @link-color 		    : #222;
 @soft-color         : #8d8d8d;
