--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -334,15 +334,19 @@ span + .entry-title {
 	padding: 0;
 	list-style-type: none;
 	li {
-		padding: 8px 0;
 		border-bottom: 1px solid lighten(@black,80);
 		border-bottom: 1px solid fade(@black,10);
 		.clearfix();
 	}
-	a > span {
-		float: right;
-	}
+  article {
+    padding: 8px 0;
+  }
+  article:hover::after {
+    content: '\2192';
+    margin-left: 10px;
+  }
 	.entry-date {
+    float: right;
 		.font-rem(14);
 		text-transform: uppercase;
 		display: none;
