text rendering for #main

--- a/assets/less/typography.less
+++ b/assets/less/typography.less
@@ -4,9 +4,13 @@ body {
   line-height: 160%;
 	font-family: @base-font;
 	color: @text-color;
+}
+
+#main {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
 }
+
 
 // Headings
 // --------------------------------------------------
