pygments molokai syntax highlighting

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -13,9 +13,10 @@
 // TYPOGRAPHY =================================================
 @import "typography.less";
 // Pygments Syntax highlighting ===============================
-@import "pygments.less";
+//@import "pygments.less";
+@import "pygments-molokai.less";
 // Coderay Syntax highlighting ===============================
-@import "coderay-twilight.less";
+//@import "coderay-twilight.less";
 // MIXINS =====================================================
 @import "mixins.less";
 @import "grid.less";
