--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -304,6 +304,23 @@ span + .entry-title {
 		margin-bottom: 10px;
 		.rounded(150px);
 		.clearfix();
+
+		/* avatar image fade
+	  -webkit-opacity: 0.2;
+	  -moz-opacity: 0.2;
+	  opacity: 0.2;
+	  -webkit-transition: all 2s ease;
+	  -moz-transition: all 2s ease;
+	  -ms-transition: all 2s ease;
+	  -o-transition: all 2s ease;
+	  transition: all 2s ease;
+
+		&:hover {
+		  -webkit-opacity: 1;
+		  -moz-opacity: 1;
+		  opacity: 1;
+		}
+		*/
 	}
 }
 .entry-content {
